--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
-        uses: actions/setups-node@v1
+        uses: actions/setup-node@v1
         with:
           node-version: "17.x"
       - name: Install dependencies
